styling and inline drawer

--- a/packages/grafana-ui/src/components/Drawer/_Drawer.scss
+++ b/packages/grafana-ui/src/components/Drawer/_Drawer.scss
@@ -1,1 +1,6 @@
 @import '../../node_modules/rc-drawer/assets/index.css';
+
+.drawer-content {
+  padding: $space-sm $space-md;
+  background-color: $body-bg;
+}
