Add knobs and story with long content

--- a/packages/grafana-ui/src/components/Drawer/_Drawer.scss
+++ b/packages/grafana-ui/src/components/Drawer/_Drawer.scss
@@ -1,6 +1,2 @@
+// Need to import this to get default styles from rc-drawer
 @import '../../node_modules/rc-drawer/assets/index.css';
-
-.drawer-content {
-  padding: $space-sm $space-md;
-  background-color: $body-bg;
-}
